crates/ars-components/src/specialized/color_field/snapshots/ars_components__specialized__color_field__tests__color_field_input_channel_hue.snap
---
source: crates/ars-components/src/specialized/color_field/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-field",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Hue",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "hue-label",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "360.00",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "0.00",
            ),
        ),
        (
            Aria(
                ValueNow,
            ),
            String(
                "210.00",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "210°",
            ),
        ),
        (
            Id,
            String(
                "hue-input",
            ),
        ),
        (
            InputMode,
            String(
                "numeric",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            Type,
            String(
                "text",
            ),
        ),
        (
            Value,
            String(
                "210",
            ),
        ),
    ],
    styles: [],
}
