crates/ars-components/src/specialized/color_field/snapshots/ars_components__specialized__color_field__tests__color_field_input_whole_color_invalid.snap
---
source: crates/ars-components/src/specialized/color_field/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-field",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Color value",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "fg-label",
            ),
        ),
        (
            Aria(
                Required,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "fg-error-message",
            ),
        ),
        (
            Id,
            String(
                "fg-input",
            ),
        ),
        (
            InputMode,
            String(
                "text",
            ),
        ),
        (
            Type,
            String(
                "text",
            ),
        ),
        (
            Value,
            String(
                "",
            ),
        ),
    ],
    styles: [],
}
