crates/ars-components/src/specialized/color_field/snapshots/ars_components__specialized__color_field__tests__color_field_root_focused_invalid.snap
---
source: crates/ars-components/src/specialized/color_field/mod.rs
expression: "snapshot_attrs(&svc.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-focused",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-invalid",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "color-field",
            ),
        ),
    ],
    styles: [],
}
